--- a/style.css
+++ b/style.css
@@ -213,6 +213,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: fit-content;
 }
 small {
   display: block;
@@ -348,10 +349,21 @@ small {
   .secimg img {
     width: 305px;
   }
-  .navbar{
-    flex-wrap: wrap;
-    justify-content: center;
+  .navbar {
+    align-items: center;
     gap: 10px;
+  }
+  .logo img {
+    width: 90px;
+  }
+  .hero {
+    padding: 37px;
+  }
+  .lightbtn {
+    padding: 5px 0px;
+  }
+  .sm-redbtn {
+    padding: 5px 10px;
   }
   .hero > :first-child {
     font-size: 30px;
@@ -379,5 +391,23 @@ small {
   }
   .text > :nth-child(2) {
     font-size: 15px;
+  }
+  .input {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  .hero button {
+    padding: 9px 10px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .hero {
+    padding-top: 60px;
+  }
+  .faqbox {
+    height: 55px;
+    font-size: 10px;
   }
 }
